lower max-width of todo title to prevent overlap of controls

--- a/src/stylesheets/css/main.css
+++ b/src/stylesheets/css/main.css
@@ -152,8 +152,19 @@ header .nav-selected > * {
   font-size: 0.87em;
 }
 .todos .prop-header .todoTitle {
+  max-width: 300px;
   font-size: 1.2em;
   user-select: none;
+}
+@media (max-width: 540px) {
+  .todos .prop-header .todoTitle {
+    max-width: 250px;
+  }
+}
+@media (max-width: 440px) {
+  .todos .prop-header .todoTitle {
+    max-width: 190px;
+  }
 }
 .todos .description,
 .todos .dueDate,
